--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --config=./jest.config.ts",
-    "format:check": "prettier --check App.tsx ./src",
-    "format:write": "prettier --write App.tsx ./src",
-    "lint": "yarn run format:check && eslint App.tsx src/"
+    "test": "jest --config=./jest.config.ts"
   },
   "jest": {
     "preset": "jest-expo"
@@ -40,11 +37,13 @@
     "expo-constants": "14.0.2",
     "expo-font": "11.0.1",
     "expo-linking": "3.3.0",
+    "expo-router": "2.0.0",
     "expo-splash-screen": "0.17.5",
     "expo-status-bar": "1.4.2",
     "expo-system-ui": "2.0.1",
     "expo-web-browser": "12.0.0",
     "formik": "2.2.9",
+    "jotai": "2.2.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
