--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true,
-    "module": "es6",
-    "baseUrl": "./src",
-    "rootDir": "./"
+    "strict": true
   }
 }
