--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --config=./jest.config.ts"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "13.0.0",
@@ -58,7 +54,6 @@
     "@babel/preset-typescript": "7.18.6",
     "@react-native-community/eslint-config": "3.2.0",
     "@testing-library/react-native": "11.5.1",
-    "@types/jest": "29.4.0",
     "@types/react": "18.0.24",
     "@types/react-native": "0.70.6",
     "@types/react-test-renderer": "18.0.0",
@@ -67,8 +62,6 @@
     "eslint": "8.32.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-ft-flow": "2.0.3",
-    "jest": "26.6.3",
-    "jest-expo": "47.0.1",
     "prettier": "2.8.3",
     "react-test-renderer": "18.1.0",
     "ts-node": "10.9.1",
