--- a/package.json
+++ b/package.json
@@ -1,70 +1,42 @@
 {
   "name": "expo-template",
   "version": "1.0.0",
-  "private": true,
-  "author": "Gustavo F. Silva <gustafsilva.dev@gmail.com>",
-  "license": "MIT",
-  "keywords": [
-    "expo",
-    "template",
-    "react",
-    "react-native"
-  ],
-  "bugs": {
-    "url": "https://github.com/gustafsilva/expo-template/issues"
-  },
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "npx expo start",
+    "start -c": "npx expo start -c",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "13.0.0",
-    "@react-navigation/bottom-tabs": "6.0.5",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "6.0.2",
-    "@react-navigation/native-stack": "6.1.0",
-    "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.7",
-    "expo": "47.0.12",
-    "expo-application": "~5.0.1",
-    "expo-asset": "8.7.0",
-    "expo-constants": "14.4.2",
-    "expo-font": "11.0.1",
-    "expo-linking": "5.0.2",
-    "expo-router": "2.0.0",
-    "expo-splash-screen": "0.17.5",
-    "expo-status-bar": "1.6.0",
-    "expo-system-ui": "2.0.1",
-    "expo-web-browser": "12.0.0",
-    "formik": "2.2.9",
-    "jotai": "2.2.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "2.12.0",
-    "react-native-safe-area-context": "4.7.1",
-    "react-native-screens": "3.22.1",
-    "react-native-web": "0.18.9",
-    "styled-components": "5.3.6"
+    "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-router": "^1.5.2",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-web-browser": "~12.1.1",
+    "jotai": "2.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "7.12.9",
-    "@babel/eslint-parser": "7.19.1",
-    "@babel/preset-typescript": "7.18.6",
-    "@react-native-community/eslint-config": "3.2.0",
-    "@testing-library/react-native": "11.5.1",
-    "@types/react": "18.0.24",
-    "@types/react-native": "0.70.6",
-    "@types/react-test-renderer": "18.0.0",
-    "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "eslint": "8.32.0",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-plugin-ft-flow": "2.0.3",
-    "prettier": "2.8.3",
-    "react-test-renderer": "18.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "4.6.3"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "0.72.2",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "eslint": "8.43.0",
+    "eslint-config-prettier": "8.8.0",
+    "prettier": "2.8.8",
+    "typescript": "^4.9.4"
+  },
+  "private": true
 }
